Correction: Header and Whitespace

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -311,7 +311,7 @@ label {
         }
 
         @media screen and (max-width: $breakpoint-small) {
-            padding: 16px $default-padding 11px;
+            padding: 15px $default-padding 12px;
         }
     }
 
